# cuz-platform

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
docs/: connector-interface.md  event-format.md
infra/docker/: docker-compose.yml
services/api/: Dockerfile  main.py  requirements.txt
services/api/middleware/: auth.py  logging.py  rate_limit.py
services/api/models/: connector.py  tenant.py
services/api/routers/: auth.py  connectors.py  health.py  tenants.py
tests/fixtures/: acmecorp-k8s.yaml
tests/integration/: test_api_p08.py
