[project]
name = "cuz-platform"
version = "0.1.0"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["packages*"]

[tool.ruff]
target-version = 'py312'
line-length = 100
select = ['E', 'F', 'I', 'N', 'W', 'B', 'UP']
ignore = ['E501']

[tool.mypy]
python_version = '3.12'
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ['tests', 'packages']
addopts = '-v --tb=short'
asyncio_mode = 'auto'

[[tool.mypy.overrides]]
module = [
    "packages.core.models.*",
    "packages.core.tests.*",
    "packages.core.interfaces.*",
    "packages.graph.tests.*",
]
ignore_errors = true